src/objects/Overpayment_Application__c.object
<CustomObject>
    <fields>
        <fullName>Overpayment_Amount__c</fullName>
        <label>Overpayment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Overpayment__c</fullName>
        <label>Overpayment</label>
        <referenceTo>Overpayment__c</referenceTo>
        <relationshipLabel>Overpayment Application</relationshipLabel>
        <relationshipName>Overpayment_Application</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>System_Bill__c</fullName>
        <label>System Bill</label>
        <referenceTo>System_Bill__c</referenceTo>
        <relationshipLabel>Overpayment Application</relationshipLabel>
        <relationshipName>Overpayment_Application</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Overpayment Application</label>
    <nameField>
        <displayFormat>OA{000000}</displayFormat>
        <label>Overpayment Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Overpayment Application</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>